--- a/PKGBUILD.tmpl
+++ b/PKGBUILD.tmpl
@@ -15,6 +15,8 @@ sha256sums=('__SHA256__')
 build() {
   cd "$pkgname-$pkgver"
   cargo build --release --locked --all-features
+  cd man
+  cargo run > $pkgname.1
 }
 
 check() {
@@ -27,4 +29,6 @@ package() {
   install -Dm 755 "target/release/$pkgname" -t "$pkgdir/usr/bin"
   install -Dm 644 README.org -t "$pkgdir/usr/share/doc/$pkgname"
   install -Dm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
+  install -Dm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
+  install -Dm644 man/$pkgname.1 $pkgdir/usr/share/man/man1/$pkgname.1
 }
